objects/vlocity_cmt__GlobalAutoNumberSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>vlocity_cmt__Increment__c</fullName>
        <label>Increment</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastGeneratedNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LastGeneratedNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LeftPadDigit__c</fullName>
        <label>LeftPadDigit</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MinimumLength__c</fullName>
        <label>Minimum Length</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Prefix__c</fullName>
        <label>Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Separator__c</fullName>
        <label>Separator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Global Auto Number Setting</label>
</CustomObject>